hot fix - relationen mellem author og bog inkluderes nu
